# mutator_sdk_cpp

./: .gitignore  CMakeLists.txt  instance.hpp  main.cpp
helpers/: client_ws.hpp  json.hpp  server_ws.hpp
structs/: mutator.pb.cc  mutator.pb.h
